// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseIntentFromReactAst - Snapshot > should produce stable anchored report for App.fixture.tsx 1`] = `
{
  "anchors": [
    {
      "componentKey": "LoginButton",
      "componentLoc": {
        "endLine": 42,
        "startLine": 25,
      },
      "componentName": "LoginButton",
      "extracted": {
        "fills": [
          "#3B82F6",
        ],
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {},
          "text": {
            "content": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 4,
                  "endLine": 40,
                  "startColumn": 5,
                  "startLine": 38,
                },
                "value": "Sign In",
              },
            ],
          },
          "visual": {
            "fills": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 34,
                  "endLine": 29,
                  "startColumn": 8,
                  "startLine": 29,
                },
                "value": "#3B82F6",
              },
            ],
          },
        },
        "text": [
          "Sign In",
        ],
      },
      "markerLine": 23,
      "nodeName": "LoginButton",
      "notes": [],
    },
    {
      "componentKey": "LoginButton",
      "componentLoc": {
        "endLine": 42,
        "startLine": 25,
      },
      "componentName": "LoginButton",
      "extracted": {
        "fills": [
          "#3B82F6",
        ],
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {},
          "text": {
            "content": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 4,
                  "endLine": 40,
                  "startColumn": 5,
                  "startLine": 38,
                },
                "value": "Sign In",
              },
            ],
          },
          "visual": {
            "fills": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 34,
                  "endLine": 29,
                  "startColumn": 8,
                  "startLine": 29,
                },
                "value": "#3B82F6",
              },
            ],
          },
        },
        "text": [
          "Sign In",
        ],
      },
      "markerLine": 24,
      "nodeName": "LoginButton::hover",
      "notes": [],
    },
    {
      "componentKey": "TestBox",
      "componentLoc": {
        "endLine": 60,
        "startLine": 49,
      },
      "componentName": "TestBox",
      "extracted": {
        "fills": [
          "#FF0000",
        ],
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {
            "height": {
              "confidence": "high",
              "loc": {
                "endColumn": 19,
                "endLine": 54,
                "startColumn": 8,
                "startLine": 54,
              },
              "value": 100,
            },
            "width": {
              "confidence": "high",
              "loc": {
                "endColumn": 18,
                "endLine": 53,
                "startColumn": 8,
                "startLine": 53,
              },
              "value": 100,
            },
          },
          "text": {},
          "visual": {
            "fills": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 34,
                  "endLine": 55,
                  "startColumn": 8,
                  "startLine": 55,
                },
                "value": "#FF0000",
              },
            ],
          },
        },
      },
      "markerLine": 48,
      "nodeName": "TestBox",
      "notes": [],
    },
    {
      "componentKey": "WelcomeHeading",
      "componentLoc": {
        "endLine": 69,
        "startLine": 67,
      },
      "componentName": "WelcomeHeading",
      "extracted": {
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {},
          "text": {
            "content": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 32,
                  "endLine": 68,
                  "startColumn": 13,
                  "startLine": 68,
                },
                "value": "Welcome to the Demo",
              },
            ],
          },
          "visual": {},
        },
        "text": [
          "Welcome to the Demo",
        ],
      },
      "markerLine": 66,
      "nodeName": "WelcomeText",
      "notes": [],
    },
  ],
  "filePath": "fixtures/App.fixture.tsx",
}
`;

exports[`parseIntentFromReactAst - Snapshot > should produce stable output for App.fixture.tsx 1`] = `
{
  "components": [
    {
      "componentKey": "LoginButton",
      "componentName": "LoginButton",
      "inlineStyleLiterals": [
        {
          "element": "button",
          "loc": {
            "endColumn": 34,
            "endLine": 29,
            "startColumn": 8,
            "startLine": 29,
          },
          "styleProp": "backgroundColor",
          "value": "#3B82F6",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 22,
            "endLine": 30,
            "startColumn": 8,
            "startLine": 30,
          },
          "styleProp": "color",
          "value": "white",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 28,
            "endLine": 31,
            "startColumn": 8,
            "startLine": 31,
          },
          "styleProp": "padding",
          "value": "12px 24px",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 27,
            "endLine": 32,
            "startColumn": 8,
            "startLine": 32,
          },
          "styleProp": "borderRadius",
          "value": "8px",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 22,
            "endLine": 33,
            "startColumn": 8,
            "startLine": 33,
          },
          "styleProp": "border",
          "value": "none",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 24,
            "endLine": 34,
            "startColumn": 8,
            "startLine": 34,
          },
          "styleProp": "fontSize",
          "value": "16px",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 23,
            "endLine": 35,
            "startColumn": 8,
            "startLine": 35,
          },
          "styleProp": "fontWeight",
          "value": 600,
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 25,
            "endLine": 36,
            "startColumn": 8,
            "startLine": 36,
          },
          "styleProp": "cursor",
          "value": "pointer",
        },
      ],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [
        {
          "loc": {
            "endColumn": 4,
            "endLine": 40,
            "startColumn": 5,
            "startLine": 38,
          },
          "text": "Sign In",
        },
      ],
      "loc": {
        "endLine": 42,
        "startLine": 25,
      },
      "semantics": {
        "booleans": {},
        "flex": {},
        "layout": {},
        "text": {
          "content": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 4,
                "endLine": 40,
                "startColumn": 5,
                "startLine": 38,
              },
              "value": "Sign In",
            },
          ],
        },
        "visual": {
          "fills": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 34,
                "endLine": 29,
                "startColumn": 8,
                "startLine": 29,
              },
              "value": "#3B82F6",
            },
          ],
        },
      },
    },
    {
      "componentKey": "TestBox",
      "componentName": "TestBox",
      "inlineStyleLiterals": [
        {
          "element": "div",
          "loc": {
            "endColumn": 18,
            "endLine": 53,
            "startColumn": 8,
            "startLine": 53,
          },
          "styleProp": "width",
          "value": 100,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 19,
            "endLine": 54,
            "startColumn": 8,
            "startLine": 54,
          },
          "styleProp": "height",
          "value": 100,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 34,
            "endLine": 55,
            "startColumn": 8,
            "startLine": 55,
          },
          "styleProp": "backgroundColor",
          "value": "#FF0000",
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 23,
            "endLine": 56,
            "startColumn": 8,
            "startLine": 56,
          },
          "styleProp": "borderRadius",
          "value": 8,
        },
      ],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [],
      "loc": {
        "endLine": 60,
        "startLine": 49,
      },
      "semantics": {
        "booleans": {},
        "flex": {},
        "layout": {
          "height": {
            "confidence": "high",
            "loc": {
              "endColumn": 19,
              "endLine": 54,
              "startColumn": 8,
              "startLine": 54,
            },
            "value": 100,
          },
          "width": {
            "confidence": "high",
            "loc": {
              "endColumn": 18,
              "endLine": 53,
              "startColumn": 8,
              "startLine": 53,
            },
            "value": 100,
          },
        },
        "text": {},
        "visual": {
          "fills": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 34,
                "endLine": 55,
                "startColumn": 8,
                "startLine": 55,
              },
              "value": "#FF0000",
            },
          ],
        },
      },
    },
    {
      "componentKey": "WelcomeHeading",
      "componentName": "WelcomeHeading",
      "inlineStyleLiterals": [],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [
        {
          "loc": {
            "endColumn": 32,
            "endLine": 68,
            "startColumn": 13,
            "startLine": 68,
          },
          "text": "Welcome to the Demo",
        },
      ],
      "loc": {
        "endLine": 69,
        "startLine": 67,
      },
      "semantics": {
        "booleans": {},
        "flex": {},
        "layout": {},
        "text": {
          "content": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 32,
                "endLine": 68,
                "startColumn": 13,
                "startLine": 68,
              },
              "value": "Welcome to the Demo",
            },
          ],
        },
        "visual": {},
      },
    },
    {
      "componentKey": "App",
      "componentName": "App",
      "inlineStyleLiterals": [
        {
          "element": "div",
          "loc": {
            "endColumn": 29,
            "endLine": 77,
            "startColumn": 18,
            "startLine": 77,
          },
          "styleProp": "padding",
          "value": 40,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 66,
            "endLine": 77,
            "startColumn": 31,
            "startLine": 77,
          },
          "styleProp": "fontFamily",
          "value": "system-ui, sans-serif",
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 35,
            "endLine": 79,
            "startColumn": 20,
            "startLine": 79,
          },
          "styleProp": "display",
          "value": "flex",
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 44,
            "endLine": 79,
            "startColumn": 37,
            "startLine": 79,
          },
          "styleProp": "gap",
          "value": 20,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 59,
            "endLine": 79,
            "startColumn": 46,
            "startLine": 79,
          },
          "styleProp": "marginTop",
          "value": 20,
        },
      ],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [],
      "loc": {
        "endLine": 85,
        "startLine": 75,
      },
      "semantics": {
        "booleans": {},
        "flex": {
          "display": {
            "confidence": "high",
            "loc": {
              "endColumn": 35,
              "endLine": 79,
              "startColumn": 20,
              "startLine": 79,
            },
            "value": "flex",
          },
        },
        "layout": {
          "gap": {
            "confidence": "high",
            "loc": {
              "endColumn": 44,
              "endLine": 79,
              "startColumn": 37,
              "startLine": 79,
            },
            "value": 20,
          },
          "padding": {
            "confidence": "high",
            "loc": {
              "endColumn": 29,
              "endLine": 77,
              "startColumn": 18,
              "startLine": 77,
            },
            "value": 40,
          },
        },
        "text": {},
        "visual": {},
      },
    },
  ],
  "filePath": "fixtures/App.fixture.tsx",
}
`;
